# ewb-grpc

./: .gitignore  AGENTS.md  LESSONS.md  PLAN_BAY.md  README.md  bitbucket-pipelines.yml  changelog.md
.github/workflows/: build-c-container.yml  build.yml  create-hotfix-branch.yml  create-lts-branch.yml  create-release.yml  deploy.yml  release-snapshot.yml
c/: Makefile
c/builder-container/: alpine-protoc.pkr.hcl
code-gen/: README.md  pyproject.toml  setup.py
code-gen/src/generators/: Proto.py
code-gen/src/zepben/: __init__.py  utils.py
code-gen/src/zepben/codegen/: dobby.py
code-gen/src/zepben/codegen/generators/: __init__.py  base_generator.py  comment_generator.py  dobby.py  kotlin_generator.py  proto_generator.py
code-gen/src/zepben/codegen/model/: definitions.py
cs/: evolve-grpc.csproj  evolve-grpc.sln  ewb-grpc.csproj
docs/: release.md
java/: build.sh  changelog.md  pom.xml
profile-manager/: build.gradle.kts  settings.gradle.kts
profile-manager/gradle/wrapper/: gradle-wrapper.properties
proto/zepben/protobuf/cc/: cc-data.proto  cc-requests.proto  cc-responses.proto  cc.proto
proto/zepben/protobuf/checkConnection/: checkConnection-requests.proto
proto/zepben/protobuf/connection/: connection-requests.proto
proto/zepben/protobuf/cp/: cp-requests.proto  cp-responses.proto  cp.proto
proto/zepben/protobuf/dc/: dc-data.proto  dc-requests.proto  dc-responses.proto  dc.proto
proto/zepben/protobuf/dp/: dp-requests.proto  dp-responses.proto  dp.proto
proto/zepben/protobuf/ec/: ec.proto
proto/zepben/protobuf/ep/: ep.proto
proto/zepben/protobuf/hc/: Job.proto  LogMessage.proto  Makefile  ModelConfig.proto  ResultsConfig.proto  ResultsDetailLevel.proto  ResultsType.proto  SolveConfig.proto  Syf.proto  energy-meter.proto  syf.proto
proto/zepben/protobuf/mapbox/: vector_tile.proto
proto/zepben/protobuf/mc/: mc-requests.proto  mc-responses.proto  mc.proto
proto/zepben/protobuf/metadata/: metadata-data.proto  metadata-requests.proto  metadata-responses.proto
proto/zepben/protobuf/mp/: mp-requests.proto  mp-responses.proto  mp.proto
proto/zepben/protobuf/nc/: nc-data.proto  nc-requests.proto  nc-responses.proto  nc.proto
proto/zepben/protobuf/nm/: set-switch-state-data.proto  set-switch-state-requests.proto  set-switch-state-responses.proto  set-switch-state.proto
proto/zepben/protobuf/np/: np-requests.proto  np-responses.proto  np.proto
proto/zepben/protobuf/ns/: network-state-requests.proto  network-state-responses.proto  network-state.proto
proto/zepben/protobuf/vc/: vc-data-change-set-members.proto  vc-data.proto  vc-requests.proto  vc-responses.proto  vc.proto
proto/zepben/protobuf/wc/: wc.proto
proto/zepben/protobuf/wp/: wp.proto
python/: build.py  generate_cim_profile_schema.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
rdfs/: cim_profile_schema.ttl
spec/Evolve/IEC61968/: __metadata.yaml
spec/Evolve/IEC61968/AssetInfo/: CableInfo.yaml  NoLoadTest.yaml  OpenCircuitTest.yaml  ShortCircuitTest.yaml  ShuntCompensatorInfo.yaml  SwitchInfo.yaml  TransformerEndInfo.yaml  TransformerTankInfo.yaml  TransformerTest.yaml  WireMaterialKind.yaml
spec/Evolve/IEC61968/Assets/: Asset.yaml  AssetInfo.yaml  AssetOrganisationRole.yaml  Streetlight.yaml  Structure.yaml  __metadata.yaml
spec/Evolve/IEC61968/Common/: Agreement.yaml  Document.yaml  Location.yaml  Organisation.yaml  OrganisationRole.yaml  PositionPoint.yaml  Status.yaml  StreetDetail.yaml  TownDetail.yaml  __metadata.yaml
spec/Evolve/IEC61968/Customers/: Customer.yaml  CustomerAgreement.yaml  PricingStructure.yaml  Tariff.yaml  __metadata.yaml
spec/Evolve/IEC61968/Metering/: EndDevice.yaml  Meter.yaml  UsagePoint.yaml  UsagePointLocation.yaml
spec/Evolve/IEC61968/Operations/: OperationalRestriction.yaml
spec/Evolve/IEC61970/: __metadata.yaml
spec/TC57CIM/IEC61968/: IEC61968CIMVersion.yaml
spec/TC57CIM/IEC61968/AssetInfo/: BusbarSectionInfo.yaml  BushingInfo.yaml  BushingInsulationKind.yaml  CableConstructionKind.yaml  CableInfo.yaml  CableOuterJacketKind.yaml  CableShieldMaterialKind.yaml  ConcentricNeutralCableInfo.yaml  InterrupterUnitInfo.yaml  InterruptingMediumKind.yaml  NoLoadTest.yaml  OpenCircuitTest.yaml  OperatingMechanismInfo.yaml  OperatingMechanismKind.yaml  PowerTransformerInfo.yaml  ShortCircuitTest.yaml  ShuntCompensatorInfo.yaml  SwitchInfo.yaml  TapChangerInfo.yaml  TapeShieldCableInfo.yaml  TransformerEndInfo.yaml  TransformerTankInfo.yaml  TransformerTest.yaml  WireAssemblyInfo.yaml  WireInfo.yaml  WireInsulationKind.yaml  WireMaterialKind.yaml  WirePhaseInfo.yaml  WirePosition.yaml  WireSpacingInfo.yaml  WireUsageKind.yaml  __metadata.yaml
spec/TC57CIM/IEC61968/AssetMeas/: AssetAnalog.yaml  AssetDiscrete.yaml  AssetStringKind.yaml  AssetStringMeasurement.yaml  AssetTemperaturePressureAnalog.yaml  AssetTemperaturePressureAnalogKind.yaml  CalculationIntervalUnitKind.yaml  CalculationMethodHierarchy.yaml  CalculationMethodOrder.yaml  CalculationModeKind.yaml  CalculationTechniqueKind.yaml  InspectionAnalog.yaml  InspectionAnalogKind.yaml  InspectionDiscrete.yaml  InspectionDiscreteKind.yaml  OilAnalysisFluidAnalog.yaml  OilAnalysisFluidAnalogKind.yaml  OilAnalysisFluidDiscrete.yaml  OilAnalysisFluidDiscreteKind.yaml  OilAnalysisGasAnalog.yaml  OilAnalysisGasAnalogKind.yaml  OilAnalysisMetalsAnalog.yaml  (+16 more)
spec/TC57CIM/IEC61970/: IEC61970CIMVersion.yaml
spec/TC57CIM/IEC62325/: IEC62325CIMVersion.yaml  __metadata.yaml
spec/TC57CIM/PackageDependencies/: PackageDependenciesCIMVersion.yaml  __metadata.yaml
spec/ewb/extensions/: __metadata.yaml
(+2716 files in other folders)
