[build-system]
requires = [
    "setuptools >= 75.6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "zepben.codegen"
version="0.0.1b1"
description="EWB Protobuf and gRPC definitions Code Generator"
license = "MPL-2.0"
authors = [
    {name = "Anthony Charlton", email = "anthony.charlton@zepben.com" },
    {name = "Max Chesterfield", email = "max.chesterfield@zepben.com" }
]
maintainers = [
    {name = "Anthony Charlton", email = "anthony.charlton@zepben.com" },
    {name = "Max Chesterfield", email = "max.chesterfield@zepben.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.urls]

GitHub = "https://github.com/zepben/ewb-grpc"
