[build-system]
requires = [
  "setuptools >= 75.6.0",
  "grpcio-tools==1.61.3",
  "wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "zepben.protobuf"
version="1.2.0b2"
description="EWB Python Protobuf and gRPC definitions"
license = "MPL-2.0"
authors = [
    {name = "Anthony Charlton", email = "anthony.charlton@zepben.com" },
    {name = "Kurt Greaves", email = "kurt.greaves@zepben.com" }
]
maintainers = [
    {name = "Anthony Charlton", email = "anthony.charlton@zepben.com" },
    {name = "Kurt Greaves", email = "kurt.greaves@zepben.com" }
]
requires-python = ">=3.9"
dependencies = [
    "protobuf==4.25.7",
    "grpcio==1.61.3",
    "grpcio-tools==1.61.3",
    "pep517",
    "pyyaml==6.0.3" # RDFS generation only
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.urls]

GitHub = "https://github.com/zepben/ewb-grpc"
