[metadata]
name = zepben.protobuf
version = 0.8.0b4
description = Zepben protobuf and gRPC definitions
license = Mozilla Public License v2.0
classifiers =
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages = find_namespace:
setup_requires =
    grpcio-tools
    pep517
install_requires =
    grpcio
    grpcio-tools
    protobuf

[options.packages.find]
where=src
