[metadata]
name = zepben.protobuf
version = 0.25.0b2
description = Evolve Python Protobuf and gRPC definitions
license = Mozilla Public License v2.0
license_files = ../LICENSE
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.7
setup_requires =
    grpcio-tools
    pep517
install_requires =
    grpcio
    grpcio-tools
    protobuf

[options.packages.find]
where=src


